# OpenEval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  action.yml  phase_1.1.md  phase_1.2.md  protection.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test-action.yml
examples/github_action_demo/suite/testcases/: test1.json  test2.json
examples/github_action_demo/suite/traces/: test1.json  test2.json
examples/langchain_adapter/: run_example.py
examples/multi_step/: testcase.json  trace.json
examples/openai_adapter/: run_example.py
examples/quickstart/: quickstart_agent.py  testcase.json  trace.json
examples/simple_agent/: testcase.json  trace.json
openeval/: __init__.py  cli.py  metrics.py  models.py  report.py  runner.py
openeval/adapters/: __init__.py  langchain.py  openai.py
tests/: test_cli.py  test_langchain_adapter.py  test_metrics.py  test_openai_adapter.py  test_runner.py
