[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openeval-core"
version = "0.1.0"
description = "Every existing tool evaluates what the agent said. OpenEval evaluates what the agent did."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
openeval = "openeval.cli:app"
