[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openeval-core"
version = "0.1.2"
description = "Every existing tool evaluates what the agent said. OpenEval evaluates what the agent did."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "openeval-core[langchain,openai]"
]
langchain = ["langchain-core"]
openai = ["openai"]

[project.scripts]
openeval = "openeval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["openeval"]
